--- a/calculate-fares/html/tax_out_in.html
+++ b/calculate-fares/html/tax_out_in.html
@@ -26,6 +26,7 @@
         <li><a href="tax_123.html">Tarifa 123Milhas</a></li>
         <li><a href="tax_out_in.html">Tarifa Ida e Volta</a></li>
         <li><a href="special_fare.html">Tarifa Especial</a></li>
+        <li><a href="conventional_fare.html">Tarifa Convencional</a></li>
     </ul>
 </nav>
 <br><br>
