--- a/calculate-fares/html/conventional_fare.html
+++ b/calculate-fares/html/conventional_fare.html
@@ -40,8 +40,8 @@
                 <p class="control">
                     <input class="input" type="text" id="txtConfig"
                            placeholder="Configuração da tarifa">
-                    <input class="input" type="number" id="txtVrPriceCia" placeholder="Valor do voo em reais na cia aérea">
-                    <input class="input" type="number" id="txtVrPartner" placeholder="Valor do voo no parceiro">
+                    <input class="input" type="text" id="txtVrPriceCia" placeholder="Valor do voo em reais na cia aérea">
+                    <input class="input" type="text" id="txtVrPartner" placeholder="Valor do voo no parceiro">
                 <div class="field-label is-normal">
                     <label class="result-outbound"></label>
                 </div>
