--- a/calculate-fares/html/conventional_fare.html
+++ b/calculate-fares/html/conventional_fare.html
@@ -33,15 +33,15 @@
 <form onsubmit="calculateFare()">
     <div class="field is-horizontal">
         <div class="field-label is-normal">
-            <label class="label">Parametros da tarifação convencional</label>
+            <label class="label">Parametros da tarifação convencional - Voo de ida</label>
         </div>
         <div class="field-body">
             <div class="field">
                 <p class="control">
-                    <input class="input" type="text" id="txtConfig"
+                    <input class="input" type="text" id="txtConfigOutbound"
                            placeholder="Configuração da tarifa">
-                    <input class="input" type="text" id="txtVrPriceCia" placeholder="Valor do voo em reais na cia aérea">
-                    <input class="input" type="text" id="txtVrPartner" placeholder="Valor do voo no parceiro">
+                    <input class="input" type="text" id="txtVrPriceCiaOutbound" placeholder="Valor do voo em reais na cia aérea">
+                    <input class="input" type="text" id="txtVrPartnerOutbound" placeholder="Valor do voo no parceiro">
                 <div class="field-label is-normal">
                     <label class="result-outbound"></label>
                 </div>
@@ -50,6 +50,25 @@
         </div>
     </div>
     <br><br><br>
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Parametros da tarifação convencional - Voo de volta</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <p class="control">
+                    <input class="input" type="text" id="txtConfigInbound"
+                           placeholder="Configuração da tarifa">
+                    <input class="input" type="text" id="txtVrPriceCiaInbound" placeholder="Valor do voo em reais na cia aérea">
+                    <input class="input" type="text" id="txtVrPartnerInbound" placeholder="Valor do voo no parceiro">
+                <div class="field-label is-normal">
+                    <label class="result-inbound"></label>
+                </div>
+                </p>
+            </div>
+        </div>
+    </div>
+    <br><br>
     <div class="container">
 
         <div class="field">
