--- a/hotel-fares/html/index.html
+++ b/hotel-fares/html/index.html
@@ -22,12 +22,7 @@
 <br>
 <nav class="breadcrumb" aria-label="breadcrumbs">
     <ul>
-        <li><a href="third_rule.html">Yield 3° Regra</a></li>
-        <li><a href="tax_123.html">Tarifa 123Milhas</a></li>
-        <li><a href="tax_out_in.html">Tarifa Ida e Volta</a></li>
-        <li><a href="special_fare.html">Tarifa Especial</a></li>
-        <li><a href="conventional_fare.html">Tarifa Convencional</a></li>
-        <li><a href="blue.html">Tarifa Blue</a></li>
+        <li><a href="fare_hotel.html">Preficicação do hotel</a></li>
     </ul>
 </nav>
 <div class="level-item has-text-centered">
