--- a/calculate-fares/html/blue.html
+++ b/calculate-fares/html/blue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Precificação</title>
-    <script src="../js/third_rule.js"></script>
+    <script src="../js/blue.js"></script>
 </head>
 <body>
 <nav class="navbar" role="navigation" aria-label="main navigation">
@@ -34,39 +34,41 @@
 <form onsubmit="calculateFare()">
     <div class="field is-horizontal">
         <div class="field-label is-normal">
-            <label class="label">Parametros da 3° regra - Voo de ida</label>
+            <label class="label">Parametros das outras cias</label>
+        </div>
+        <div class="field-body">
+            <div class="field">
+                <p class="control">
+                    <input class="input" type="text" id="txtVrCia" placeholder="Valor cia">
+                    <input class="input" type="text" id="txtUpFareBlue" placeholder="UpFare Blue">
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="field is-horizontal">
+        <div class="field-label is-normal">
+            <label class="label">Parametros da tarifação blue</label>
         </div>
         <div class="field-body">
             <div class="field">
                 <p class="control">
                     <input class="input" type="text" id="txtConfigOutbound"
-                           placeholder="Configuração de tarifa para voo de ida">
-                    <input class="input" type="number" id="txtVrMillesOutbound" placeholder="Quantidade de milhas ida">
-                    <input class="input" type="text" id="txtVrOutbound" placeholder="Valor do voo de ida em reais">
-                <div class="field-label is-normal">
+                           placeholder="Configuração da tarifa">
+                    <input class="input" type="text" id="txtVrConventionalOutbound"
+                           placeholder="Valor do voo precificado convencional">
+                    <br>
                     <label class="result-outbound"></label>
-                </div>
                 </p>
             </div>
         </div>
     </div>
     <br><br><br>
-    <div class="field is-horizontal">
-        <div class="field-label is-normal">
-            <label class="label">Parametros da 3° regra - Voo de volta</label>
-        </div>
-        <div class="field-body">
-            <div class="field">
-                <p class="control">
-                    <input class="input" type="text" id="txtConfigInbound"
-                           placeholder="Configuração de tarifa para voo de volta">
-                    <input class="input" type="number" id="txtVrMillesInbound" placeholder="Quantidade de milhas volta">
-                    <input class="input" type="text" id="txtVrInbound" placeholder="Valor do voo de volta em reais">
-                <div class="field-label is-normal">
-                    <label class="result-inbound"></label>
-                </div>
-                </p>
-            </div>
+    <div class="field-body">
+        <div class="field">
+            <p class="control">
+                <label class="result"></label>
+            </p>
         </div>
     </div>
     <br><br>
@@ -76,11 +78,7 @@
             <button class="button is-primary center">Calcular</button>
         </div>
     </div>
-    <div class="field-label is-normal">
-        <label class="result"></label>
-    </div>
 </form>
-
 
 </body>
 </html>
