--- a/calculate-fares/html/conventional_fare.html
+++ b/calculate-fares/html/conventional_fare.html
@@ -27,6 +27,7 @@
         <li><a href="tax_out_in.html">Tarifa Ida e Volta</a></li>
         <li><a href="special_fare.html">Tarifa Especial</a></li>
         <li><a href="conventional_fare.html">Tarifa Convencional</a></li>
+        <li><a href="blue.html">Tarifa Blue</a></li>
     </ul>
 </nav>
 <br><br>
